# ZavrsniRad

./: .env.example  README.md  odvajanje tablica.py  process_all.ps1  pyproject.toml  requirements.txt
excel_to_csv_dcat/: .gitignore  README.md  __init__.py  __main__.py  ai_analysis.py  cli.py  config.py  core.py  gui.py  metadata.py  pyproject.toml  requirements.txt  setup.py  tox.ini
excel_to_csv_dcat/excel_to_csv_dcat/: __init__.py  cli.py  core.py  gui.py
excel_to_csv_dcat/tests/: test_core.py
