[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel_to_csv_dcat"
version = "0.1.0"
description = "Excel to CSV converter with table detection and DCAT metadata generation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "rdflib>=7.0",
]

[project.scripts]
excel_to_csv_dcat = "excel_to_csv_dcat.cli:main"
excel_to_csv_dcat_gui = "excel_to_csv_dcat.gui:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["excel_to_csv_dcat*"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3